--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <div class="movie-container">
-      <label>Pick a movie:</label>
+      <label>Choisissez votre film:</label>
       <select id="movie">
-        <option value="10">Avengers: Endgame ($10)</option>
-        <option value="12">Joker ($12)</option>
-        <option value="8">Toy Story 4 ($8)</option>
-        <option value="9">The Lion King ($9)</option>
+        <option value="7">Evil Dead 2       (7€)</option>
+        <option value="9">The Batman        (9€)</option>
+        <option value="9">The Northman      (9€)</option>
+        <option value="9">Jackass Forever   (9€)</option>
+        <option value="7">They Live         (7€)</option>
+
       </select>
     </div>
 
@@ -26,12 +28,12 @@
 
       <li>
         <div class="seat selected"></div>
-        <small>Selected</small>
+        <small>Selectionné</small>
       </li>
 
       <li>
         <div class="seat occupied"></div>
-        <small>Occupied</small>
+        <small>Occupé</small>
       </li>
     </ul>
 
@@ -104,7 +106,7 @@
     </div>
 
     <p class="text">
-      You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
+      Vous avez selectionné <span id="count">0</span> siège(s). <br> Total : <span id="total">0</span>€
     </p>
     <script src="script.js"></script>
   </body>
